mern-todo-docker/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-todo
  labels:
    app: mern-todo
